--- a/_config.yml
+++ b/_config.yml
@@ -1,44 +1,29 @@
-title: ""
+title: Davíð's site
 author: Davíð Freyr Björnsson
 email: david24099@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  ""
+  Portfolio site and blog about Data Science.
 show_excerpts: true # set to true to show excerpts on the homepage
+baseurl: ""
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
 sass:
   sass_dir: _sass
-plainwhite:
-  name: Davíð Freyr Björnsson
-  # tagline: Computer Scientist. Economist.
+
+permalink: /posts/:title/
+texture:
+  title: Davíð Freyr Björnsson
+  tagline: Master's student in Data Science.
   date_format: "%b %-d, %Y"
-  sitemap: true # set to true to generate sitemap.xml content
-  show_excerpts: true
+  style: black
+  showNav: true
+  showPicker: false
 
   # generate social links in footer
   social_links:
-    github:  dfb2
+    github: dfb2
     linkedIn: in/davíð-freyr-björnsson-0b950870
-    # dribbble: jekyll
-    # facebook: jekyll
-    # flickr:   jekyll
-    # instagram: jekyll
-    # linkedin: jekyll
-    # pinterest: jekyll
-    # youtube: jekyll
-    # youtube_channel: UC8CXR0-3I70i1tfPg1PAE1g
-    # youtube_channel_name: CloudCannon
-    # telegram: jekyll
-    # googleplus: +jekyll
-    # microdotblog: jekyll
-
-    # Mastodon instances
-    # mastodon:
-    # - username: jekyll
-    #   instance: example.com
-    # - username: jekyll2
-    #   instance: example.com
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
@@ -46,7 +31,7 @@ plainwhite:
 # - about.md
 
 # Build settings
-theme: plainwhite
+# theme: texture
 
 plugins:
   - jekyll-seo-tag
