--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,6 @@ title: Davíð's site
 author: Davíð Freyr Björnsson
 email: david24099@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Portfolio site and blog about Data Science.
 show_excerpts: true # set to true to show excerpts on the homepage
 baseurl: ""
 
@@ -14,7 +13,7 @@ sass:
 permalink: /posts/:title/
 texture:
   title: Davíð Freyr Björnsson
-  tagline: Master's student in Data Science.
+  tagline: Master's student in Data Science at Chalmers University of Technology.
   date_format: "%b %-d, %Y"
   style: black
   showNav: true
